added more translation

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "اللاعب المستهدف قد تعطيل الهدايا والتجارة",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "لا يمكن للاعب المستهدف المشاركة في التجارة",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "لا يمكنك الدعوة بشكل متكرر للغاية ، فإن Trade Invite Cooldown هو ${minutes}",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7273,6 +7288,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. اطلب من صديقك أن يدخل اسم اللعبة أثناء إنشاء الشخصية",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. فعلت ، هذا كل شيء!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
