--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Cílový hráč má deaktivovaný dárek a obchod",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Cílový hráč se nemůže účastnit obchodu",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Nemůžete pozvat příliš často, obchod s pozváním cooldown je ${minutes} minuty",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7273,6 +7288,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. Nechte svého přítele zadat svůj název hry během tvorby postav",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. hotovo, to je ono!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
