--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Target Player hat Geschenke und Handel mit Behinderungen",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Zielspieler kann nicht am Handel teilnehmen",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sie können nicht zu häufig einladen, Handelsladungsabklingzeit beträgt ${minutes} Minuten",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7272,6 +7287,10 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
+ 	 	 	 	"trans": "2. Das ist es!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
  	 	 	 	"trans": "2. Das ist es!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
