--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "El jugador objetivo ha desactivado el regalo y el intercambio",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "El jugador objetivo no puede participar en el comercio",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "No puede invitar con demasiada frecuencia, la invitación de intercambio de intercambio es de ${minutes} minutos",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7273,6 +7288,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. Haz que tu amigo ingrese tu nombre en el juego durante la creación de personajes.",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. ¡Hecho, eso es todo!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
