--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Il giocatore target ha un regalo e commercio disabili",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Il giocatore target non può partecipare al commercio",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Non puoi invitare troppo frequentemente, il cooldown di invito al commercio è ${minutes} minuti",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7486,6 +7501,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. Chiedi al tuo amico di inserire il tuo nome di gioco durante la creazione del personaggio\\n 2. Fatto, questo è tutto!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. Fatto, questo è tutto!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
