--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "ターゲットプレーヤーはギフトと貿易を無効にしています",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "ターゲットプレーヤーは貿易に参加できません",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "あまり頻繁に招待することはできません、Trade Invite Cooldownは${minutes}議事録です",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7485,6 +7500,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "2.これで完了！",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2.やった、それだ！",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
