--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "O jogador -alvo desativou presentes e comércio",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "O jogador -alvo não pode participar do comércio",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Você não pode convidar com muita frequência, o Convite de Comércio e a recarga é ${minutes} minutos",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7486,6 +7501,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. Peça ao seu amigo que insira seu nome no jogo durante a criação do personagem",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. Feito, é isso!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
