--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Target Player má darček a obchod so zdravotným postihnutím",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Cieľový hráč sa nemôže zúčastniť na obchode",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Nemôžete pozvať príliš často, obchod s pozvanou Cooldown je ${minutes} minút",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7486,6 +7501,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. Nechajte svojho priateľa zadať svoje meno v hre počas tvorby postavy",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. Hotovo, to je všetko!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
