--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "ผู้เล่นเป้าหมายมีของขวัญและการค้าปิดใช้งาน",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "ผู้เล่นเป้าหมายไม่สามารถเข้าร่วมการค้าได้",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "คุณไม่สามารถเชิญบ่อยเกินไป Trade Invite Cooldown คือ ${minutes} นาที",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7273,6 +7288,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1. ให้เพื่อนของคุณป้อนชื่อในเกมของคุณระหว่างการสร้างตัวละคร",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. เสร็จแล้ว!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
