--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Người chơi mục tiêu đã vô hiệu hóa quà tặng và giao dịch",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Người chơi mục tiêu không thể tham gia vào thương mại",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Bạn không thể mời quá thường xuyên, thời gian hồi chiêu mời giao dịch là ${minutes} phút",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7272,6 +7287,10 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
+ 	 	 	 	"trans": "2. Xong, đó là nó!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
  	 	 	 	"trans": "2. Xong, đó là nó!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
