--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "目標玩家關閉了禮物和交易功能",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "此玩家不能參與交易",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "您不能太頻繁地邀請，交易邀請冷卻為${minutes}分鐘",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7477,6 +7492,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "1.讓您的朋友在角色創建期間輸入您的遊戲名稱",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2.完成！",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
