--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Pemain target telah menonaktifkan hadiah dan perdagangan",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Pemain target tidak dapat berpartisipasi dalam perdagangan",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Anda tidak dapat mengundang terlalu sering, perdagangan mengundang cooldown adalah ${minutes} menit",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7272,6 +7287,10 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
+ 	 	 	 	"trans": "2. Selesai, itu saja!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
  	 	 	 	"trans": "2. Selesai, itu saja!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
