--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Target Player heeft geschenk en handel gehandicapt",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Target -speler kan niet deelnemen aan de handel",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "U kunt niet te vaak uitnodigen, Trade Invite Cooldown is ${minutes} minuten",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7272,6 +7287,10 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
+ 	 	 	 	"trans": "2. Gedaan, dat is het!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
  	 	 	 	"trans": "2. Gedaan, dat is het!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
