--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Ang Target Player ay hindi pinagana ang regalo at kalakalan",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Ang target na manlalaro ay hindi maaaring lumahok sa kalakalan",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Hindi ka maaaring mag -imbita ng madalas, ang Trade Invite Cooldown ay ${minutes} minuto",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7485,6 +7500,10 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
+ 	 	 	 	"trans": "2. Tapos na, iyon!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
  	 	 	 	"trans": "2. Tapos na, iyon!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
