--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -3687,6 +3687,21 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"targetPlayerBlockedGifts": {
+ 	 	 	 	"trans": "Hedef Oyuncu hediye ve ticaret devre dışı bıraktı",
+ 	 	 	 	"eng": "Target player has disabled gift and trade"
+ 	 	 	},
+ 	 	 	"targetPlayerLimited": {
+ 	 	 	 	"trans": "Hedef oyuncu ticarete katılamaz",
+ 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	},
+ 	 	 	"tooFrequentlyInvite": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"minutes"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Çok sık davet edemezsiniz, Ticaret Daveti bekleme süresi ${minutes} dakikadır",
+ 	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
@@ -7273,6 +7288,10 @@
  	 	 	},
  	 	 	"step1": {
  	 	 	 	"trans": "2. bitti, bu kadar!",
+ 	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
+ 	 	 	},
+ 	 	 	"step2": {
+ 	 	 	 	"trans": "2. bitti, bu!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
