DE translation fixes

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -368,7 +368,7 @@
  	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
  	 	 	 	},
  	 	 	 	"activateVPN": {
- 	 	 	 	 	"trans": "Aktivieren Sie VPN",
+ 	 	 	 	 	"trans": "VPN aktivieren",
  	 	 	 	 	"eng": "Activate VPN"
  	 	 	 	}
  	 	 	},
@@ -1062,7 +1062,7 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Eben",
+ 	 	 	 	 	"trans": "Level",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
@@ -2068,7 +2068,7 @@
  	 	 	 	"eng": "Links"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Hier finden Sie alle unsere Social -Media -Links, kommen Sie und verbinden Sie sich mit der erstaunlichen Community!",
+ 	 	 	 	"trans": "Hier finden Sie alle unsere Social -Media -Links, kommen Sie und verbinden Sie sich mit der großartigen Community!",
  	 	 	 	"eng": "Here you can find all our social media links, come and connect with the amazing community!"
  	 	 	},
  	 	 	"reportBug": {
@@ -3576,7 +3576,7 @@
  	},
  	"slider": {
  	 	"min": {
- 	 	 	"trans": "Mindest",
+ 	 	 	"trans": "Min",
  	 	 	"eng": "Min"
  	 	},
  	 	"max": {
@@ -4021,7 +4021,7 @@
  	 	 	"eng": "CyberKitty"
  	 	},
  	 	"donation12": {
- 	 	 	"trans": "Cyberanta",
+ 	 	 	"trans": "CyberSanta",
  	 	 	"eng": "CyberSanta"
  	 	},
  	 	"donation13": {
