more DE translation improvements

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -976,7 +976,7 @@
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	},
  	 	 	 	"block": {
- 	 	 	 	 	"trans": "Blocker",
+ 	 	 	 	 	"trans": "Spieler bockieren",
  	 	 	 	 	"eng": "Block Player"
  	 	 	 	}
  	 	 	},
@@ -2984,11 +2984,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"amount"
  	 	 	 	],
- 	 	 	 	"trans": "Dies spendet ${amount} Unit von deinem Konto.",
+ 	 	 	 	"trans": "Dies spendet ${amount} Units von deinem Konto.",
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "Du hast nicht genug Unit, um zu spenden.",
+ 	 	 	 	"trans": "Du hast nicht genug Units, um zu spenden.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
  	 	 	}
  	 	},
@@ -3002,7 +3002,7 @@
  	 	 	 	"eng": "Report and Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
- 	 	 	 	"trans": "Profil anzeigen",
+ 	 	 	 	"trans": "Profil ansehen",
  	 	 	 	"eng": "View Profile"
  	 	 	},
  	 	 	"openPlayerGang": {
@@ -3688,7 +3688,7 @@
  	 	},
  	 	"error": {
  	 	 	"targetPlayerBlockedGifts": {
- 	 	 	 	"trans": "Target Player hat Geschenke und Handel mit Behinderungen",
+ 	 	 	 	"trans": "Zielspieler hat Geschenke und Handel deaktiviert",
  	 	 	 	"eng": "Target player has disabled gift and trade"
  	 	 	},
  	 	 	"targetPlayerLimited": {
@@ -3699,7 +3699,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"minutes"
  	 	 	 	],
- 	 	 	 	"trans": "Sie können nicht zu häufig einladen, Handelsladungsabklingzeit beträgt ${minutes} Minuten",
+ 	 	 	 	"trans": "Sie können nicht so häufig einladen, die Einladeabklingzeit beträgt ${minutes} Minuten",
  	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
  	 	 	},
  	 	 	"notEnoughItems": {
@@ -7266,7 +7266,7 @@
  	},
  	"referralPromo": {
  	 	"title": {
- 	 	 	"trans": "Verweisen Sie Ihre Freunde, um großartige Belohnungen zu erhalten!",
+ 	 	 	"trans": "Bringen Sie Ihre Freunde ins Spiel, um großartige Belohnungen zu erhalten!",
  	 	 	"eng": "Refer your friends to get amazing rewards!"
  	 	},
  	 	"desc1": {
@@ -7287,11 +7287,11 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
- 	 	 	 	"trans": "2. Das ist es!",
+ 	 	 	 	"trans": "1. Lass deinen Freund deinen Spielernamen während der Charaktererstellung eintragen!",
  	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
  	 	 	},
  	 	 	"step2": {
- 	 	 	 	"trans": "2. Das ist es!",
+ 	 	 	 	"trans": "2. fertig, geschafft!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
