--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3688,18 +3688,18 @@
  	 	},
  	 	"error": {
  	 	 	"targetPlayerBlockedGifts": {
- 	 	 	 	"trans": "Il giocatore target ha un regalo e commercio disabili",
+ 	 	 	 	"trans": "Il giocatore selezionato ha disabilitato i regali e lo scambio",
  	 	 	 	"eng": "Target player has disabled gift and trade"
  	 	 	},
  	 	 	"targetPlayerLimited": {
- 	 	 	 	"trans": "Il giocatore target non può partecipare al commercio",
+ 	 	 	 	"trans": "Il giocatore selezionato non può partecipare allo scambio",
  	 	 	 	"eng": "Target player cannot participate in trade"
  	 	 	},
  	 	 	"tooFrequentlyInvite": {
  	 	 	 	"vars": [
  	 	 	 	 	"minutes"
  	 	 	 	],
- 	 	 	 	"trans": "Non puoi invitare troppo frequentemente, il cooldown di invito al commercio è ${minutes} minuti",
+ 	 	 	 	"trans": "Non puoi mandare inviti troppo spesso, devi attendere ${minutes} minuti",
  	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
  	 	 	},
  	 	 	"notEnoughItems": {
@@ -7500,7 +7500,7 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
- 	 	 	 	"trans": "1. Chiedi al tuo amico di inserire il tuo nome di gioco durante la creazione del personaggio\\n 2. Fatto, questo è tutto!",
+ 	 	 	 	"trans": "1. Chiedi al tuo amico di inserire il tuo nome di gioco durante la creazione del personaggio",
  	 	 	 	"eng": "1. Have your friend enter your in-game name during character creation"
  	 	 	},
  	 	 	"step2": {
