--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -976,7 +976,7 @@
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	},
  	 	 	 	"block": {
- 	 	 	 	 	"trans": "塊播放器",
+ 	 	 	 	 	"trans": "封鎖玩家",
  	 	 	 	 	"eng": "Block Player"
  	 	 	 	}
  	 	 	},
