--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -354,7 +354,7 @@
  	 	 	 	"eng": "mail"
  	 	 	},
  	 	 	"noti": {
- 	 	 	 	"trans": "公告",
+ 	 	 	 	"trans": "通知",
  	 	 	 	"eng": "noti."
  	 	 	}
  	 	},
